# Test

./: .gitignore  README.md
backend/: .coveragerc  .flake8  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  tox.ini
backend/docs/: Makefile  README.md
backend/docs/source/: conf.py  index.rst
backend/docs/source/api/: modules.rst  ventserver.integration.rst  ventserver.io.asynchronous.rst  ventserver.io.rst  ventserver.io.trio.rst  ventserver.protocols.application.rst  ventserver.protocols.protobuf.rst  ventserver.protocols.rst  ventserver.rst  ventserver.sansio.rst  ventserver.util.rst
backend/tests/bdd_samples/: test_crcelements_bdd_style.py
backend/tests/integration/: test_frontend.py  test_mcu.py
backend/tests/integration/trio/: application.py  io.py  mocks.py
backend/tests/io/trio/: re_pigpio.py  serial.py
backend/tests/io/trio/re_samples/: re_samples.pckl  re_samples.txt
backend/tests/mocks/Arduino/SerialEcho/: SerialEcho.ino
backend/tests/mocks/trio/: endpoints.py  frontend_client.py  websocket_client.py  websocket_server.py
backend/tests/profiling/: __init__.py  hash_tests.py
backend/tests/unit/: conftest.py
backend/tests/unit/io/trio/: test_fileio.py  test_rotaryencoder.py  test_websocket.py
backend/tests/unit/io/trio/fileio_tests/: Alarms.pb  Alarms_bad_crc.pb  CycleMeasurements.pb  CycleMeasurements_bad_crc.pb  ParametersRequest_bad_crc.pb  Parameters_bad_crc.pb  Parameters_bad_data.pb  SensorMeasurements.pb  fileio_read_repeated.pb  fileio_write_read_ow.pb
backend/tests/unit/protocols/: test_application.py  test_chunks.py  test_cobs.py  test_crcelements.py  test_datagrams.py  test_file.py  test_messages.py  test_rotaryencoder.py
backend/tests/unit/protocols/application/: test_lists.py  test_states.py
backend/tests/unit/sansio/: test_bytearraystream.py  test_dequechannel.py  test_filters.py
backend/tests/unit/util/: test_crc.py
backend/ventserver/: application.py  simulation.py  simulator.py
backend/ventserver/integration/: __init__.py  _trio.py
backend/ventserver/io/: __init__.py  _serial.py  fileobject.py  rotaryencoder.py  websocket.py
backend/ventserver/io/asynchronous/: __init__.py  endpoints.py  protocols.py
backend/ventserver/io/subprocess/: __init__.py  frozen_frontend.py
backend/ventserver/io/trio/: __init__.py  _serial.py  channels.py  endpoints.py  fileio.py  rotaryencoder.py  websocket.py
backend/ventserver/protocols/: __init__.py  application.py  backend.py  crcelements.py  datagrams.py  events.py  exceptions.py  file.py  frames.py  frontend.py  mcu.py  messages.py  rotary_encoder.py  server.py
backend/ventserver/protocols/application/: __init__.py  lists.py  states.py
backend/ventserver/protocols/protobuf/: frontend_pb.py  mcu_pb.py
backend/ventserver/sansio/: __init__.py  channels.py  protocols.py  streams.py
backend/ventserver/simulation/: __init__.py  alarm_limits.py  alarms.py  log.py  parameters.py  simulators.py
backend/ventserver/util/: __init__.py  crc.py
deploy/: README.md  setup.sh  (+2 more)
firmware/ventilator-controller-stm32/: .clang-format  .clang-tidy  .cproject  .gitignore  .project  CMakeLists.txt  README.md  application.cppcheck  clang-format-all.sh  clang-format-stm32cubemx-user.sh  clang-tidy-all.sh  clang-tidy-line-filters.sh  cmake.sh  cppcheck.sh  grep-stm32cubemx-user.sh  ventilator-controller-stm32 Debug.launch  ventilator-controller-stm32 TestCatch2.launch  ventilator-controller-stm32.ioc
firmware/ventilator-controller-stm32/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/: AlarmsManager.h  Statuses.h  Types.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Application/: States.h  States.tpp  mcu_pb.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Driver/: Initializable.h  ShiftRegister.h  ShiftedOutput.h  Testable.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/HAL/: CRC.h  CRCChecker.h  CRCChecker.tpp  HAL.h  Types.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Protocols/: CRCElements.h  CRCElements.tpp  Chunks.h  Chunks.tpp  Datagrams.h  Datagrams.tpp  Messages.h  Messages.tpp  States.h  States.tpp
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/Util/: Array.h  Bytes.h  Bytes.tpp  COBS.h  COBS.tpp  Endian.h  Enums.h  Parse.h  Parse.tpp  Protobuf.h  RingBuffer.h  RingBuffer.tpp  TaggedUnion.h  Timeouts.h  Timeouts.tpp  Vector.h  Vector.tpp
firmware/ventilator-controller-stm32/Core/Inc/catch2/: catch.hpp
firmware/ventilator-controller-stm32/Core/Src/: main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/: AlarmsManager.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Application/: States.cpp  mcu_pb.c
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/Driver/: ShiftRegister.cpp  ShiftedOutput.cpp
firmware/ventilator-controller-stm32/Core/Src/nanopb/: pb_common.c  pb_decode.c  pb_encode.c
firmware/ventilator-controller-stm32/Core/Test/: main_catch2.cpp
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/: catch2.cpp  timeouts.cpp
firmware/ventilator-controller-stm32/Docs/: ClassDiagram.md
firmware/ventilator-controller-stm32/cmake/: toolchain-arm-none-eabi.cmake
(+384 files in other folders)
